--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "datatables.net-dt": "^1.10.20"
     }
 }
